<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffmpeg_image_transport</name>
  <version>0.0.1</version>
  <description>Image transport plugins that use ffmpeg for encoding and decoding the video stream</description>
  <maintainer email="arissynod@gmail.com">Aris Synodinos</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>pluginlib</depend>
  <depend>ffmpeg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
    <image_transport plugin="${prefix}/ffmpeg_plugins.xml" />
  </export>
</package>
